feat: 新增任务监控页面并优化任务管理功能
- 新增独立的任务监控页面，支持按小说ID过滤和实时刷新
- 在侧边栏添加任务监控入口，优化导航结构
- 为任务列表添加小说标题显示，提升可读性
- 实现运行中任务保护机制，防止误删除
- 统一API错误处理，增强409冲突响应
- 重构任务缓存接口，增加NoOp默认实现
- 优化文件上传接口，使用命令模式封装参数
- 修复知识库版本删除时的任务冲突检查
- 移除入库页面的内嵌任务队列，改为跳转到监控页面